[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/actors/player/class_player.gd" type="Script" id=1]
[ext_resource path="res://art/kenneynl_testsprite_dog.png" type="Texture" id=2]
[ext_resource path="res://src/technical/rocking_tween.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/technical/abilities/weapon_ability.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/technical/abilities/active_ability.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/projectile/kenney_simplespace/ship_D.png" type="Texture" id=6]
[ext_resource path="res://art/shrek_pup_dog_sprite.png" type="Texture" id=7]
[ext_resource path="res://art/shrek_pup_eye_sprite.png" type="Texture" id=8]
[ext_resource path="res://src/interface/ui_player_hud.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/technical/DamageImmunityTimer.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.389163 )
colors = PoolColorArray( 1, 1, 1, 0.196078, 1, 1, 1, 0 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 253
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TargetingSpriteHolder" type="Node2D" parent="."]
rotation = 1.5708

[node name="TargetingSprite" type="Sprite" parent="TargetingSpriteHolder"]
modulate = Color( 1, 1, 1, 0.196078 )
show_behind_parent = true
position = Vector2( -0.280609, -1.1225 )
scale = Vector2( 2, 1 )
texture = ExtResource( 6 )
offset = Vector2( 0, -100 )

[node name="SniperTargetingLine" type="Line2D" parent="TargetingSpriteHolder/TargetingSprite"]
show_behind_parent = true
rotation = 1.5708
points = PoolVector2Array( 0, 0, -1000, 0 )
width = 5.0
gradient = SubResource( 2 )
texture_mode = 2

[node name="SpriteHolder" type="Node2D" parent="."]

[node name="StaticSprite" type="Sprite" parent="SpriteHolder"]
texture = ExtResource( 7 )

[node name="RockingTween" parent="SpriteHolder/StaticSprite" instance=ExtResource( 3 )]
anim_duration = 0.75
anim_max_angle = 3

[node name="StaticSpriteShadowOutline" type="Sprite" parent="SpriteHolder/StaticSprite"]
modulate = Color( 0, 0, 0, 0.215686 )
texture = ExtResource( 2 )
offset = Vector2( 4, 5 )

[node name="EyeSprite_Left" type="Sprite" parent="SpriteHolder/StaticSprite"]
position = Vector2( -33.5, 5.5 )
texture = ExtResource( 8 )

[node name="EyeSprite_Right" type="Sprite" parent="SpriteHolder/StaticSprite"]
position = Vector2( 33.5, 5.5 )
texture = ExtResource( 8 )

[node name="DamageImmunityTimer" parent="SpriteHolder/StaticSprite" instance=ExtResource( 10 )]
immunity_duration = 0.75

[node name="StaticSpriteShadowUnder" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.215686 )
show_behind_parent = true
position = Vector2( -5, 60 )
scale = Vector2( 0.8, 0.1 )
texture = ExtResource( 2 )
offset = Vector2( 4, 5 )

[node name="AbilityHolder" type="Node2D" parent="."]

[node name="WeaponAbility" parent="AbilityHolder" instance=ExtResource( 4 )]

[node name="ActiveAbility1" parent="AbilityHolder" instance=ExtResource( 5 )]

[node name="ActiveAbility2" parent="AbilityHolder" instance=ExtResource( 5 )]

[node name="OrbitalProjectileHolder" type="Node2D" parent="."]

[node name="UICanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerHUD" parent="UICanvasLayer" instance=ExtResource( 9 )]
[connection signal="damaged" from="." to="." method="_on_Player_damaged"]
[connection signal="updated_cooldown" from="AbilityHolder/WeaponAbility" to="." method="_on_WeaponAbility_updated_cooldown"]
[connection signal="updated_cooldown" from="AbilityHolder/ActiveAbility1" to="." method="_on_ActiveAbility1_updated_cooldown"]
[connection signal="updated_cooldown" from="AbilityHolder/ActiveAbility2" to="." method="_on_ActiveAbility2_updated_cooldown"]
